--- a/partials/fileChoose1/html.html
+++ b/partials/fileChoose1/html.html
@@ -1,6 +1,4 @@
-<div class="fileChoose1 preview">
-    <div class="btn-choose">
-        <div class="fileChoose1-label">Choose file...</div>
-        <input type="file" class="file-input" data-box="fileChoose1" name="fileChoose1-file">
-    </div>
+<div id="file-select1" class="custom-file">
+    <label for="custom-file-input1">Choose file...</label>
+    <input type="file" id="custom-file-input1" class="custom-file-input">
 </div>
