--- a/css/fileselect.css
+++ b/css/fileselect.css
@@ -12,8 +12,7 @@ h2, h3, h4 {
   text-align: center;
 }
 
-
-
+/*************************************** NAVIGATION ******************************/
 
 .header {
   height: 55px;
@@ -84,7 +83,7 @@ h2, h3, h4 {
   border-bottom: 3px solid #fff; 
 }
 
-
+/*************************************** NAVIGATION ******************************/
 
 
 
@@ -146,19 +145,10 @@ h2, h3, h4 {
   display: none;
 }
 
-.samples .sample .preview {
-  width: 100%;
-}
-
-
 
 .samples#checkboxes {
   display: none;
 }
-
-
-
-
 
 
 .copied {
@@ -176,8 +166,7 @@ h2, h3, h4 {
 }
 
 
-
-
+/************************************ CODE HEADER ****************************************/
 
 .code-header {
   display: none;
@@ -211,9 +200,9 @@ h2, h3, h4 {
   color: #d3394c;
 }
 
+/************************************ CODE HEADER ****************************************/
 
-
-
+/************************************ FAQ ****************************************/
 .faq {
   padding : 30px 20px;
   color: #fff;
@@ -234,126 +223,37 @@ h2, h3, h4 {
   color: #a8a8a8;
 }
 
+/************************************ FAQ ****************************************/
 
-/******************************/
 
-.fileChoose1 {
-  position: relative;
+.custom-file {
+  border: 1px solid #d3394c;
   text-align: center;
-}
-
-.fileChoose1 .btn-choose {
-  position: relative;
   height: 40px;
-  line-height: 40px;
-  text-align: center;
-  
-  border: 1px solid transparent;
-  background-color: #d3394c;
-}
-
-.fileChoose1 .btn-choose:hover {
-  border-color: #d3394c;
-  background-color: transparent;
-  color: #d3394c;
-}
-
-.fileChoose1 .fileChoose1-label {
-  display: block;
-  cursor: pointer;
-  padding: 0px 10px;
-  
-  color: #fff;
-  
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.fileChoose1 input {
-  position: absolute;
-  top: 0;
-  left: 0;
+  line-height: 38px;
   width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  color: #FFFFFF;
+}
+
+.custom-file > label {
+  display: block;
+  padding: 0px 15px;
+  background-color: #d3394c;
+  border-right: 1px solid transparent;
   cursor: pointer;
-  opacity: 0;
+}
+
+.custom-file:hover > label {
+  border-right-color: #d3394c;
+  background-color: transparent;
+}
+
+.custom-file input[type="file"] {
+  display: none;
 }
 
 /*****************************/
 
-
-
-.fileChoose2 {
-  position: relative;
-  text-align: center;
-}
-
-.fileChoose2:before {
-  content: " ";
-  display: table;
-}
-
-.fileChoose2:after {
-  content: " ";
-  display: table;
-  clear: both;
-}
-
-.fileChoose2 .btn-choose {
-  position: relative;
-  float: left;
-  width: 60%;
-  padding: 0px 10px;
-  height: 40px;
-  line-height: 40px;
-  
-  color: #fff;
-  
-  border: 1px solid transparent;
-  background-color: #d3394c;
-  
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.fileChoose2 .btn-choose:hover {
-  border-color: #d3394c;
-  background-color: transparent;
-  color: #fff;
-}
-
-.fileChoose2 .fileChoose2-label {
-  float: left;
-  width: 40%;
-  height: 40px;
-  line-height: 40px;
-  
-  padding: 0px 10px;
-  
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  
-  border: 1px solid #d3394c;
-  border-left: none;
-  color: #fff;
-}
-
-.fileChoose2 input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  cursor: pointer;
-  opacity: 0;
-}
 
 
 /****************************/
